// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScheduleFilters finds all games involving one or more teams 1`] = `
Array [
  Object {
    "away": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "23",
    "date": 2002-09-08T04:00:00.000Z,
    "home": Object {
      "abbrev": "WAS",
      "conference": "NFC",
      "division": "East",
      "id": "was",
      "location": "Washington",
      "name": "Redskins",
    },
    "homePts": "31",
    "id": "10",
    "result": "HOME",
    "week": "1",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "24",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "SEA",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "homePts": "13",
    "id": "28",
    "result": "AWAY",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "SD",
      "conference": "AFC",
      "division": "West",
      "id": "sdg",
      "location": "San Diego",
      "name": "Chargers",
    },
    "awayPts": "23",
    "date": 2002-09-22T04:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "15",
    "id": "40",
    "result": "AWAY",
    "week": "3",
  },
  Object {
    "away": Object {
      "abbrev": "NYG",
      "conference": "NFC",
      "division": "East",
      "id": "nyg",
      "location": "New York",
      "name": "Giants",
    },
    "awayPts": "7",
    "date": 2002-09-29T04:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "21",
    "id": "55",
    "result": "AWAY",
    "week": "4",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "16",
    "date": 2002-10-06T04:00:00.000Z,
    "home": Object {
      "abbrev": "CAR",
      "conference": "NFC",
      "division": "South",
      "id": "car",
      "location": "Carolina",
      "name": "Panthers",
    },
    "homePts": "13",
    "id": "62",
    "result": "AWAY",
    "week": "5",
  },
  Object {
    "away": Object {
      "abbrev": "DAL",
      "conference": "NFC",
      "division": "East",
      "id": "dal",
      "location": "Dallas",
      "name": "Cowboys",
    },
    "awayPts": "6",
    "date": 2002-10-20T04:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "9",
    "id": "99",
    "result": "HOME",
    "week": "7",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "28",
    "date": 2002-10-27T04:00:00.000Z,
    "home": Object {
      "abbrev": "SF",
      "conference": "NFC",
      "division": "West",
      "id": "sfo",
      "location": "San Francisco",
      "name": "49ers",
    },
    "homePts": "38",
    "id": "112",
    "result": "HOME",
    "week": "8",
  },
  Object {
    "away": Object {
      "abbrev": "STL",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "awayPts": "27",
    "date": 2002-11-03T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "14",
    "id": "128",
    "result": "AWAY",
    "week": "9",
  },
  Object {
    "away": Object {
      "abbrev": "SEA",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "awayPts": "27",
    "date": 2002-11-10T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "6",
    "id": "140",
    "result": "HOME",
    "week": "10",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "14",
    "date": 2002-11-17T05:00:00.000Z,
    "home": Object {
      "abbrev": "PHI",
      "conference": "NFC",
      "division": "East",
      "id": "phi",
      "location": "Philadelphia",
      "name": "Eagles",
    },
    "homePts": "38",
    "id": "150",
    "result": "HOME",
    "week": "11",
  },
  Object {
    "away": Object {
      "abbrev": "OAK",
      "conference": "AFC",
      "division": "West",
      "id": "rai",
      "location": "Oakland",
      "name": "Raiders",
    },
    "awayPts": "41",
    "date": 2002-11-24T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "20",
    "id": "171",
    "result": "AWAY",
    "week": "12",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "0",
    "date": 2002-12-01T05:00:00.000Z,
    "home": Object {
      "abbrev": "KC",
      "conference": "AFC",
      "division": "West",
      "id": "kan",
      "location": "Kansas City",
      "name": "Chiefs",
    },
    "homePts": "49",
    "id": "180",
    "result": "HOME",
    "week": "13",
  },
  Object {
    "away": Object {
      "abbrev": "DET",
      "conference": "NFC",
      "division": "North",
      "id": "det",
      "location": "Detroit",
      "name": "Lions",
    },
    "awayPts": "20",
    "date": 2002-12-08T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "23",
    "id": "204",
    "result": "HOME",
    "week": "14",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "28",
    "date": 2002-12-15T05:00:00.000Z,
    "home": Object {
      "abbrev": "STL",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "homePts": "30",
    "id": "223",
    "result": "HOME",
    "week": "15",
  },
  Object {
    "away": Object {
      "abbrev": "SF",
      "conference": "NFC",
      "division": "West",
      "id": "sfo",
      "location": "San Francisco",
      "name": "49ers",
    },
    "awayPts": "17",
    "date": 2002-12-21T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "14",
    "id": "226",
    "result": "AWAY",
    "week": "16",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "7",
    "date": 2002-12-29T05:00:00.000Z,
    "home": Object {
      "abbrev": "DEN",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "homePts": "37",
    "id": "254",
    "result": "AWAY",
    "week": "17",
  },
]
`;

exports[`ScheduleFilters finds all games involving one or more teams 2`] = `
Array [
  Object {
    "away": Object {
      "abbrev": "BAL",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "awayPts": "7",
    "date": 2002-09-08T04:00:00.000Z,
    "home": Object {
      "abbrev": "CAR",
      "conference": "NFC",
      "division": "South",
      "id": "car",
      "location": "Carolina",
      "name": "Panthers",
    },
    "homePts": "10",
    "id": "2",
    "result": "AWAY",
    "week": "1",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "23",
    "date": 2002-09-08T04:00:00.000Z,
    "home": Object {
      "abbrev": "WAS",
      "conference": "NFC",
      "division": "East",
      "id": "was",
      "location": "Washington",
      "name": "Redskins",
    },
    "homePts": "31",
    "id": "10",
    "result": "HOME",
    "week": "1",
  },
  Object {
    "away": Object {
      "abbrev": "TB",
      "conference": "NFC",
      "division": "South",
      "id": "tam",
      "location": "Tampa Bay",
      "name": "Buccaneers",
    },
    "awayPts": "25",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "BAL",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "homePts": "0",
    "id": "19",
    "result": "AWAY",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "24",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "SEA",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "homePts": "13",
    "id": "28",
    "result": "AWAY",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "SD",
      "conference": "AFC",
      "division": "West",
      "id": "sdg",
      "location": "San Diego",
      "name": "Chargers",
    },
    "awayPts": "23",
    "date": 2002-09-22T04:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "15",
    "id": "40",
    "result": "AWAY",
    "week": "3",
  },
  Object {
    "away": Object {
      "abbrev": "NYG",
      "conference": "NFC",
      "division": "East",
      "id": "nyg",
      "location": "New York",
      "name": "Giants",
    },
    "awayPts": "7",
    "date": 2002-09-29T04:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "21",
    "id": "55",
    "result": "AWAY",
    "week": "4",
  },
  Object {
    "away": Object {
      "abbrev": "DEN",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "awayPts": "23",
    "date": 2002-09-30T04:00:00.000Z,
    "home": Object {
      "abbrev": "BAL",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "homePts": "34",
    "id": "60",
    "result": "HOME",
    "week": "4",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "16",
    "date": 2002-10-06T04:00:00.000Z,
    "home": Object {
      "abbrev": "CAR",
      "conference": "NFC",
      "division": "South",
      "id": "car",
      "location": "Carolina",
      "name": "Panthers",
    },
    "homePts": "13",
    "id": "62",
    "result": "AWAY",
    "week": "5",
  },
  Object {
    "away": Object {
      "abbrev": "BAL",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "awayPts": "26",
    "date": 2002-10-06T04:00:00.000Z,
    "home": Object {
      "abbrev": "CLE",
      "conference": "AFC",
      "division": "North",
      "id": "cle",
      "location": "Cleveland",
      "name": "Browns",
    },
    "homePts": "21",
    "id": "73",
    "result": "AWAY",
    "week": "5",
  },
  Object {
    "away": Object {
      "abbrev": "BAL",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "awayPts": "20",
    "date": 2002-10-13T04:00:00.000Z,
    "home": Object {
      "abbrev": "IND",
      "conference": "AFC",
      "division": "South",
      "id": "clt",
      "location": "Indianapolis",
      "name": "Colts",
    },
    "homePts": "22",
    "id": "75",
    "result": "HOME",
    "week": "6",
  },
  Object {
    "away": Object {
      "abbrev": "JAX",
      "conference": "AFC",
      "division": "South",
      "id": "jax",
      "location": "Jacksonville",
      "name": "Jaguars",
    },
    "awayPts": "10",
    "date": 2002-10-20T04:00:00.000Z,
    "home": Object {
      "abbrev": "BAL",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "homePts": "17",
    "id": "90",
    "result": "HOME",
    "week": "7",
  },
  Object {
    "away": Object {
      "abbrev": "DAL",
      "conference": "NFC",
      "division": "East",
      "id": "dal",
      "location": "Dallas",
      "name": "Cowboys",
    },
    "awayPts": "6",
    "date": 2002-10-20T04:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "9",
    "id": "99",
    "result": "HOME",
    "week": "7",
  },
  Object {
    "away": Object {
      "abbrev": "PIT",
      "conference": "AFC",
      "division": "North",
      "id": "pit",
      "location": "Pittsburgh",
      "name": "Steelers",
    },
    "awayPts": "31",
    "date": 2002-10-27T04:00:00.000Z,
    "home": Object {
      "abbrev": "BAL",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "homePts": "18",
    "id": "108",
    "result": "AWAY",
    "week": "8",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "28",
    "date": 2002-10-27T04:00:00.000Z,
    "home": Object {
      "abbrev": "SF",
      "conference": "NFC",
      "division": "West",
      "id": "sfo",
      "location": "San Francisco",
      "name": "49ers",
    },
    "homePts": "38",
    "id": "112",
    "result": "HOME",
    "week": "8",
  },
  Object {
    "away": Object {
      "abbrev": "BAL",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "awayPts": "17",
    "date": 2002-11-03T05:00:00.000Z,
    "home": Object {
      "abbrev": "ATL",
      "conference": "NFC",
      "division": "South",
      "id": "atl",
      "location": "Atlanta",
      "name": "Falcons",
    },
    "homePts": "20",
    "id": "124",
    "result": "HOME",
    "week": "9",
  },
  Object {
    "away": Object {
      "abbrev": "STL",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "awayPts": "27",
    "date": 2002-11-03T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "14",
    "id": "128",
    "result": "AWAY",
    "week": "9",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "27",
    "date": 2002-11-10T05:00:00.000Z,
    "home": Object {
      "abbrev": "BAL",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "homePts": "38",
    "id": "134",
    "result": "HOME",
    "week": "10",
  },
  Object {
    "away": Object {
      "abbrev": "SEA",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "awayPts": "27",
    "date": 2002-11-10T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "6",
    "id": "140",
    "result": "HOME",
    "week": "10",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "14",
    "date": 2002-11-17T05:00:00.000Z,
    "home": Object {
      "abbrev": "PHI",
      "conference": "NFC",
      "division": "East",
      "id": "phi",
      "location": "Philadelphia",
      "name": "Eagles",
    },
    "homePts": "38",
    "id": "150",
    "result": "HOME",
    "week": "11",
  },
  Object {
    "away": Object {
      "abbrev": "BAL",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "awayPts": "7",
    "date": 2002-11-17T05:00:00.000Z,
    "home": Object {
      "abbrev": "MIA",
      "conference": "AFC",
      "division": "East",
      "id": "mia",
      "location": "Miami",
      "name": "Dolphins",
    },
    "homePts": "26",
    "id": "157",
    "result": "AWAY",
    "week": "11",
  },
  Object {
    "away": Object {
      "abbrev": "TEN",
      "conference": "AFC",
      "division": "South",
      "id": "oti",
      "location": "Tennessee",
      "name": "Titans",
    },
    "awayPts": "12",
    "date": 2002-11-24T05:00:00.000Z,
    "home": Object {
      "abbrev": "BAL",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "homePts": "13",
    "id": "164",
    "result": "HOME",
    "week": "12",
  },
  Object {
    "away": Object {
      "abbrev": "OAK",
      "conference": "AFC",
      "division": "West",
      "id": "rai",
      "location": "Oakland",
      "name": "Raiders",
    },
    "awayPts": "41",
    "date": 2002-11-24T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "20",
    "id": "171",
    "result": "AWAY",
    "week": "12",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "0",
    "date": 2002-12-01T05:00:00.000Z,
    "home": Object {
      "abbrev": "KC",
      "conference": "AFC",
      "division": "West",
      "id": "kan",
      "location": "Kansas City",
      "name": "Chiefs",
    },
    "homePts": "49",
    "id": "180",
    "result": "HOME",
    "week": "13",
  },
  Object {
    "away": Object {
      "abbrev": "BAL",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "awayPts": "27",
    "date": 2002-12-01T05:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "23",
    "id": "183",
    "result": "AWAY",
    "week": "13",
  },
  Object {
    "away": Object {
      "abbrev": "NO",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "awayPts": "37",
    "date": 2002-12-08T05:00:00.000Z,
    "home": Object {
      "abbrev": "BAL",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "homePts": "25",
    "id": "203",
    "result": "AWAY",
    "week": "14",
  },
  Object {
    "away": Object {
      "abbrev": "DET",
      "conference": "NFC",
      "division": "North",
      "id": "det",
      "location": "Detroit",
      "name": "Lions",
    },
    "awayPts": "20",
    "date": 2002-12-08T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "23",
    "id": "204",
    "result": "HOME",
    "week": "14",
  },
  Object {
    "away": Object {
      "abbrev": "BAL",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "awayPts": "23",
    "date": 2002-12-15T05:00:00.000Z,
    "home": Object {
      "abbrev": "HOU",
      "conference": "AFC",
      "division": "South",
      "id": "htx",
      "location": "Houston",
      "name": "Texans",
    },
    "homePts": "19",
    "id": "213",
    "result": "AWAY",
    "week": "15",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "28",
    "date": 2002-12-15T05:00:00.000Z,
    "home": Object {
      "abbrev": "STL",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "homePts": "30",
    "id": "223",
    "result": "HOME",
    "week": "15",
  },
  Object {
    "away": Object {
      "abbrev": "SF",
      "conference": "NFC",
      "division": "West",
      "id": "sfo",
      "location": "San Francisco",
      "name": "49ers",
    },
    "awayPts": "17",
    "date": 2002-12-21T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "14",
    "id": "226",
    "result": "AWAY",
    "week": "16",
  },
  Object {
    "away": Object {
      "abbrev": "CLE",
      "conference": "AFC",
      "division": "North",
      "id": "cle",
      "location": "Cleveland",
      "name": "Browns",
    },
    "awayPts": "14",
    "date": 2002-12-22T05:00:00.000Z,
    "home": Object {
      "abbrev": "BAL",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "homePts": "13",
    "id": "237",
    "result": "AWAY",
    "week": "16",
  },
  Object {
    "away": Object {
      "abbrev": "BAL",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "awayPts": "31",
    "date": 2002-12-29T05:00:00.000Z,
    "home": Object {
      "abbrev": "PIT",
      "conference": "AFC",
      "division": "North",
      "id": "pit",
      "location": "Pittsburgh",
      "name": "Steelers",
    },
    "homePts": "34",
    "id": "245",
    "result": "HOME",
    "week": "17",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "7",
    "date": 2002-12-29T05:00:00.000Z,
    "home": Object {
      "abbrev": "DEN",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "homePts": "37",
    "id": "254",
    "result": "AWAY",
    "week": "17",
  },
]
`;

exports[`ScheduleFilters finds the common games between two or more teams 1`] = `
Array [
  Object {
    "away": Object {
      "abbrev": "DEN",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "awayPts": "24",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "SF",
      "conference": "NFC",
      "division": "West",
      "id": "sfo",
      "location": "San Francisco",
      "name": "49ers",
    },
    "homePts": "14",
    "id": "27",
    "result": "AWAY",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "SD",
      "conference": "AFC",
      "division": "West",
      "id": "sdg",
      "location": "San Diego",
      "name": "Chargers",
    },
    "awayPts": "9",
    "date": 2002-10-06T04:00:00.000Z,
    "home": Object {
      "abbrev": "DEN",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "homePts": "26",
    "id": "69",
    "result": "AWAY",
    "week": "5",
  },
  Object {
    "away": Object {
      "abbrev": "STL",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "awayPts": "13",
    "date": 2002-10-06T04:00:00.000Z,
    "home": Object {
      "abbrev": "SF",
      "conference": "NFC",
      "division": "West",
      "id": "sfo",
      "location": "San Francisco",
      "name": "49ers",
    },
    "homePts": "37",
    "id": "72",
    "result": "HOME",
    "week": "5",
  },
  Object {
    "away": Object {
      "abbrev": "OAK",
      "conference": "AFC",
      "division": "West",
      "id": "rai",
      "location": "Oakland",
      "name": "Raiders",
    },
    "awayPts": "13",
    "date": 2002-10-13T04:00:00.000Z,
    "home": Object {
      "abbrev": "STL",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "homePts": "28",
    "id": "86",
    "result": "HOME",
    "week": "6",
  },
  Object {
    "away": Object {
      "abbrev": "DEN",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "awayPts": "37",
    "date": 2002-10-20T04:00:00.000Z,
    "home": Object {
      "abbrev": "KC",
      "conference": "AFC",
      "division": "West",
      "id": "kan",
      "location": "Kansas City",
      "name": "Chiefs",
    },
    "homePts": "34",
    "id": "89",
    "result": "AWAY",
    "week": "7",
  },
  Object {
    "away": Object {
      "abbrev": "SEA",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "awayPts": "20",
    "date": 2002-10-20T04:00:00.000Z,
    "home": Object {
      "abbrev": "STL",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "homePts": "37",
    "id": "91",
    "result": "HOME",
    "week": "7",
  },
  Object {
    "away": Object {
      "abbrev": "STL",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "awayPts": "27",
    "date": 2002-11-03T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "14",
    "id": "128",
    "result": "AWAY",
    "week": "9",
  },
  Object {
    "away": Object {
      "abbrev": "SD",
      "conference": "AFC",
      "division": "West",
      "id": "sdg",
      "location": "San Diego",
      "name": "Chargers",
    },
    "awayPts": "24",
    "date": 2002-11-10T05:00:00.000Z,
    "home": Object {
      "abbrev": "STL",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "homePts": "28",
    "id": "135",
    "result": "HOME",
    "week": "10",
  },
  Object {
    "away": Object {
      "abbrev": "OAK",
      "conference": "AFC",
      "division": "West",
      "id": "rai",
      "location": "Oakland",
      "name": "Raiders",
    },
    "awayPts": "34",
    "date": 2002-11-11T05:00:00.000Z,
    "home": Object {
      "abbrev": "DEN",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "homePts": "10",
    "id": "144",
    "result": "AWAY",
    "week": "10",
  },
  Object {
    "away": Object {
      "abbrev": "DEN",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "awayPts": "31",
    "date": 2002-11-17T05:00:00.000Z,
    "home": Object {
      "abbrev": "SEA",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "homePts": "9",
    "id": "156",
    "result": "HOME",
    "week": "11",
  },
  Object {
    "away": Object {
      "abbrev": "DEN",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "awayPts": "27",
    "date": 2002-12-01T05:00:00.000Z,
    "home": Object {
      "abbrev": "SD",
      "conference": "AFC",
      "division": "West",
      "id": "sdg",
      "location": "San Diego",
      "name": "Chargers",
    },
    "homePts": "30",
    "id": "188",
    "result": "HOME",
    "week": "13",
  },
  Object {
    "away": Object {
      "abbrev": "STL",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "awayPts": "10",
    "date": 2002-12-08T05:00:00.000Z,
    "home": Object {
      "abbrev": "KC",
      "conference": "AFC",
      "division": "West",
      "id": "kan",
      "location": "Kansas City",
      "name": "Chiefs",
    },
    "homePts": "49",
    "id": "193",
    "result": "HOME",
    "week": "14",
  },
  Object {
    "away": Object {
      "abbrev": "KC",
      "conference": "AFC",
      "division": "West",
      "id": "kan",
      "location": "Kansas City",
      "name": "Chiefs",
    },
    "awayPts": "24",
    "date": 2002-12-15T05:00:00.000Z,
    "home": Object {
      "abbrev": "DEN",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "homePts": "31",
    "id": "220",
    "result": "HOME",
    "week": "15",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "28",
    "date": 2002-12-15T05:00:00.000Z,
    "home": Object {
      "abbrev": "STL",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "homePts": "30",
    "id": "223",
    "result": "HOME",
    "week": "15",
  },
  Object {
    "away": Object {
      "abbrev": "STL",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "awayPts": "10",
    "date": 2002-12-22T05:00:00.000Z,
    "home": Object {
      "abbrev": "SEA",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "homePts": "30",
    "id": "236",
    "result": "HOME",
    "week": "16",
  },
  Object {
    "away": Object {
      "abbrev": "DEN",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "awayPts": "16",
    "date": 2002-12-22T05:00:00.000Z,
    "home": Object {
      "abbrev": "OAK",
      "conference": "AFC",
      "division": "West",
      "id": "rai",
      "location": "Oakland",
      "name": "Raiders",
    },
    "homePts": "28",
    "id": "238",
    "result": "HOME",
    "week": "16",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "7",
    "date": 2002-12-29T05:00:00.000Z,
    "home": Object {
      "abbrev": "DEN",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "homePts": "37",
    "id": "254",
    "result": "AWAY",
    "week": "17",
  },
  Object {
    "away": Object {
      "abbrev": "SF",
      "conference": "NFC",
      "division": "West",
      "id": "sfo",
      "location": "San Francisco",
      "name": "49ers",
    },
    "awayPts": "20",
    "date": 2002-12-30T05:00:00.000Z,
    "home": Object {
      "abbrev": "STL",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "homePts": "31",
    "id": "256",
    "result": "HOME",
    "week": "17",
  },
]
`;

exports[`ScheduleFilters finds the common games between two or more teams 2`] = `
Array [
  Object {
    "away": Object {
      "abbrev": "JAX",
      "conference": "AFC",
      "division": "South",
      "id": "jax",
      "location": "Jacksonville",
      "name": "Jaguars",
    },
    "awayPts": "23",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "KC",
      "conference": "AFC",
      "division": "West",
      "id": "kan",
      "location": "Kansas City",
      "name": "Chiefs",
    },
    "homePts": "16",
    "id": "17",
    "result": "AWAY",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "DEN",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "awayPts": "37",
    "date": 2002-10-20T04:00:00.000Z,
    "home": Object {
      "abbrev": "KC",
      "conference": "AFC",
      "division": "West",
      "id": "kan",
      "location": "Kansas City",
      "name": "Chiefs",
    },
    "homePts": "34",
    "id": "89",
    "result": "AWAY",
    "week": "7",
  },
  Object {
    "away": Object {
      "abbrev": "STL",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "awayPts": "10",
    "date": 2002-12-08T05:00:00.000Z,
    "home": Object {
      "abbrev": "KC",
      "conference": "AFC",
      "division": "West",
      "id": "kan",
      "location": "Kansas City",
      "name": "Chiefs",
    },
    "homePts": "49",
    "id": "193",
    "result": "HOME",
    "week": "14",
  },
  Object {
    "away": Object {
      "abbrev": "KC",
      "conference": "AFC",
      "division": "West",
      "id": "kan",
      "location": "Kansas City",
      "name": "Chiefs",
    },
    "awayPts": "24",
    "date": 2002-12-15T05:00:00.000Z,
    "home": Object {
      "abbrev": "DEN",
      "conference": "AFC",
      "division": "West",
      "id": "den",
      "location": "Denver",
      "name": "Broncos",
    },
    "homePts": "31",
    "id": "220",
    "result": "HOME",
    "week": "15",
  },
]
`;

exports[`ScheduleFilters finds the conference games of one or more teams 1`] = `
Array [
  Object {
    "away": Object {
      "abbrev": "SD",
      "conference": "AFC",
      "division": "West",
      "id": "sdg",
      "location": "San Diego",
      "name": "Chargers",
    },
    "awayPts": "34",
    "date": 2002-09-08T04:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "6",
    "id": "8",
    "result": "HOME",
    "week": "1",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "7",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "CLE",
      "conference": "AFC",
      "division": "North",
      "id": "cle",
      "location": "Cleveland",
      "name": "Browns",
    },
    "homePts": "20",
    "id": "21",
    "result": "AWAY",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "21",
    "date": 2002-10-06T04:00:00.000Z,
    "home": Object {
      "abbrev": "IND",
      "conference": "AFC",
      "division": "South",
      "id": "clt",
      "location": "Indianapolis",
      "name": "Colts",
    },
    "homePts": "28",
    "id": "61",
    "result": "HOME",
    "week": "5",
  },
  Object {
    "away": Object {
      "abbrev": "PIT",
      "conference": "AFC",
      "division": "North",
      "id": "pit",
      "location": "Pittsburgh",
      "name": "Steelers",
    },
    "awayPts": "34",
    "date": 2002-10-13T04:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "7",
    "id": "79",
    "result": "HOME",
    "week": "6",
  },
  Object {
    "away": Object {
      "abbrev": "TEN",
      "conference": "AFC",
      "division": "South",
      "id": "oti",
      "location": "Tennessee",
      "name": "Titans",
    },
    "awayPts": "30",
    "date": 2002-10-27T04:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "24",
    "id": "105",
    "result": "AWAY",
    "week": "8",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "38",
    "date": 2002-11-03T05:00:00.000Z,
    "home": Object {
      "abbrev": "HOU",
      "conference": "AFC",
      "division": "South",
      "id": "htx",
      "location": "Houston",
      "name": "Texans",
    },
    "homePts": "3",
    "id": "119",
    "result": "AWAY",
    "week": "9",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "27",
    "date": 2002-11-10T05:00:00.000Z,
    "home": Object {
      "abbrev": "BAL",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "homePts": "38",
    "id": "134",
    "result": "HOME",
    "week": "10",
  },
  Object {
    "away": Object {
      "abbrev": "CLE",
      "conference": "AFC",
      "division": "North",
      "id": "cle",
      "location": "Cleveland",
      "name": "Browns",
    },
    "awayPts": "27",
    "date": 2002-11-17T05:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "20",
    "id": "148",
    "result": "AWAY",
    "week": "11",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "21",
    "date": 2002-11-24T05:00:00.000Z,
    "home": Object {
      "abbrev": "PIT",
      "conference": "AFC",
      "division": "North",
      "id": "pit",
      "location": "Pittsburgh",
      "name": "Steelers",
    },
    "homePts": "29",
    "id": "162",
    "result": "HOME",
    "week": "12",
  },
  Object {
    "away": Object {
      "abbrev": "BAL",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "awayPts": "27",
    "date": 2002-12-01T05:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "23",
    "id": "183",
    "result": "AWAY",
    "week": "13",
  },
  Object {
    "away": Object {
      "abbrev": "JAX",
      "conference": "AFC",
      "division": "South",
      "id": "jax",
      "location": "Jacksonville",
      "name": "Jaguars",
    },
    "awayPts": "29",
    "date": 2002-12-15T05:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "15",
    "id": "215",
    "result": "AWAY",
    "week": "15",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "9",
    "date": 2002-12-29T05:00:00.000Z,
    "home": Object {
      "abbrev": "BUF",
      "conference": "AFC",
      "division": "East",
      "id": "buf",
      "location": "Buffalo",
      "name": "Bills",
    },
    "homePts": "27",
    "id": "243",
    "result": "AWAY",
    "week": "17",
  },
]
`;

exports[`ScheduleFilters finds the conference games of one or more teams 2`] = `
Array [
  Object {
    "away": Object {
      "abbrev": "SD",
      "conference": "AFC",
      "division": "West",
      "id": "sdg",
      "location": "San Diego",
      "name": "Chargers",
    },
    "awayPts": "34",
    "date": 2002-09-08T04:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "6",
    "id": "8",
    "result": "HOME",
    "week": "1",
  },
  Object {
    "away": Object {
      "abbrev": "NO",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "awayPts": "26",
    "date": 2002-09-08T04:00:00.000Z,
    "home": Object {
      "abbrev": "TB",
      "conference": "NFC",
      "division": "South",
      "id": "tam",
      "location": "Tampa Bay",
      "name": "Buccaneers",
    },
    "homePts": "20",
    "id": "12",
    "result": "AWAY",
    "week": "1",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "7",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "CLE",
      "conference": "AFC",
      "division": "North",
      "id": "cle",
      "location": "Cleveland",
      "name": "Browns",
    },
    "homePts": "20",
    "id": "21",
    "result": "AWAY",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "GB",
      "conference": "NFC",
      "division": "North",
      "id": "gnb",
      "location": "Green Bay",
      "name": "Packers",
    },
    "awayPts": "20",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "NO",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "homePts": "35",
    "id": "25",
    "result": "HOME",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "NO",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "awayPts": "29",
    "date": 2002-09-22T04:00:00.000Z,
    "home": Object {
      "abbrev": "CHI",
      "conference": "NFC",
      "division": "North",
      "id": "chi",
      "location": "Chicago",
      "name": "Bears",
    },
    "homePts": "23",
    "id": "39",
    "result": "AWAY",
    "week": "3",
  },
  Object {
    "away": Object {
      "abbrev": "NO",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "awayPts": "21",
    "date": 2002-09-29T04:00:00.000Z,
    "home": Object {
      "abbrev": "DET",
      "conference": "NFC",
      "division": "North",
      "id": "det",
      "location": "Detroit",
      "name": "Lions",
    },
    "homePts": "26",
    "id": "53",
    "result": "HOME",
    "week": "4",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "21",
    "date": 2002-10-06T04:00:00.000Z,
    "home": Object {
      "abbrev": "IND",
      "conference": "AFC",
      "division": "South",
      "id": "clt",
      "location": "Indianapolis",
      "name": "Colts",
    },
    "homePts": "28",
    "id": "61",
    "result": "HOME",
    "week": "5",
  },
  Object {
    "away": Object {
      "abbrev": "NO",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "awayPts": "43",
    "date": 2002-10-13T04:00:00.000Z,
    "home": Object {
      "abbrev": "WAS",
      "conference": "NFC",
      "division": "East",
      "id": "was",
      "location": "Washington",
      "name": "Redskins",
    },
    "homePts": "27",
    "id": "77",
    "result": "AWAY",
    "week": "6",
  },
  Object {
    "away": Object {
      "abbrev": "PIT",
      "conference": "AFC",
      "division": "North",
      "id": "pit",
      "location": "Pittsburgh",
      "name": "Steelers",
    },
    "awayPts": "34",
    "date": 2002-10-13T04:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "7",
    "id": "79",
    "result": "HOME",
    "week": "6",
  },
  Object {
    "away": Object {
      "abbrev": "SF",
      "conference": "NFC",
      "division": "West",
      "id": "sfo",
      "location": "San Francisco",
      "name": "49ers",
    },
    "awayPts": "27",
    "date": 2002-10-20T04:00:00.000Z,
    "home": Object {
      "abbrev": "NO",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "homePts": "35",
    "id": "93",
    "result": "HOME",
    "week": "7",
  },
  Object {
    "away": Object {
      "abbrev": "TEN",
      "conference": "AFC",
      "division": "South",
      "id": "oti",
      "location": "Tennessee",
      "name": "Titans",
    },
    "awayPts": "30",
    "date": 2002-10-27T04:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "24",
    "id": "105",
    "result": "AWAY",
    "week": "8",
  },
  Object {
    "away": Object {
      "abbrev": "ATL",
      "conference": "NFC",
      "division": "South",
      "id": "atl",
      "location": "Atlanta",
      "name": "Falcons",
    },
    "awayPts": "37",
    "date": 2002-10-27T04:00:00.000Z,
    "home": Object {
      "abbrev": "NO",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "homePts": "35",
    "id": "110",
    "result": "AWAY",
    "week": "8",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "38",
    "date": 2002-11-03T05:00:00.000Z,
    "home": Object {
      "abbrev": "HOU",
      "conference": "AFC",
      "division": "South",
      "id": "htx",
      "location": "Houston",
      "name": "Texans",
    },
    "homePts": "3",
    "id": "119",
    "result": "AWAY",
    "week": "9",
  },
  Object {
    "away": Object {
      "abbrev": "NO",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "awayPts": "34",
    "date": 2002-11-10T05:00:00.000Z,
    "home": Object {
      "abbrev": "CAR",
      "conference": "NFC",
      "division": "South",
      "id": "car",
      "location": "Carolina",
      "name": "Panthers",
    },
    "homePts": "24",
    "id": "133",
    "result": "AWAY",
    "week": "10",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "27",
    "date": 2002-11-10T05:00:00.000Z,
    "home": Object {
      "abbrev": "BAL",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "homePts": "38",
    "id": "134",
    "result": "HOME",
    "week": "10",
  },
  Object {
    "away": Object {
      "abbrev": "CLE",
      "conference": "AFC",
      "division": "North",
      "id": "cle",
      "location": "Cleveland",
      "name": "Browns",
    },
    "awayPts": "27",
    "date": 2002-11-17T05:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "20",
    "id": "148",
    "result": "AWAY",
    "week": "11",
  },
  Object {
    "away": Object {
      "abbrev": "NO",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "awayPts": "17",
    "date": 2002-11-17T05:00:00.000Z,
    "home": Object {
      "abbrev": "ATL",
      "conference": "NFC",
      "division": "South",
      "id": "atl",
      "location": "Atlanta",
      "name": "Falcons",
    },
    "homePts": "24",
    "id": "153",
    "result": "HOME",
    "week": "11",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "21",
    "date": 2002-11-24T05:00:00.000Z,
    "home": Object {
      "abbrev": "PIT",
      "conference": "AFC",
      "division": "North",
      "id": "pit",
      "location": "Pittsburgh",
      "name": "Steelers",
    },
    "homePts": "29",
    "id": "162",
    "result": "HOME",
    "week": "12",
  },
  Object {
    "away": Object {
      "abbrev": "BAL",
      "conference": "AFC",
      "division": "North",
      "id": "rav",
      "location": "Baltimore",
      "name": "Ravens",
    },
    "awayPts": "27",
    "date": 2002-12-01T05:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "23",
    "id": "183",
    "result": "AWAY",
    "week": "13",
  },
  Object {
    "away": Object {
      "abbrev": "TB",
      "conference": "NFC",
      "division": "South",
      "id": "tam",
      "location": "Tampa Bay",
      "name": "Buccaneers",
    },
    "awayPts": "20",
    "date": 2002-12-01T05:00:00.000Z,
    "home": Object {
      "abbrev": "NO",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "homePts": "23",
    "id": "191",
    "result": "HOME",
    "week": "13",
  },
  Object {
    "away": Object {
      "abbrev": "JAX",
      "conference": "AFC",
      "division": "South",
      "id": "jax",
      "location": "Jacksonville",
      "name": "Jaguars",
    },
    "awayPts": "29",
    "date": 2002-12-15T05:00:00.000Z,
    "home": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "homePts": "15",
    "id": "215",
    "result": "AWAY",
    "week": "15",
  },
  Object {
    "away": Object {
      "abbrev": "MIN",
      "conference": "NFC",
      "division": "North",
      "id": "min",
      "location": "Minneapolis",
      "name": "Vikings",
    },
    "awayPts": "32",
    "date": 2002-12-15T05:00:00.000Z,
    "home": Object {
      "abbrev": "NO",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "homePts": "31",
    "id": "217",
    "result": "AWAY",
    "week": "15",
  },
  Object {
    "away": Object {
      "abbrev": "CIN",
      "conference": "AFC",
      "division": "North",
      "id": "cin",
      "location": "Cincinnati",
      "name": "Bengals",
    },
    "awayPts": "9",
    "date": 2002-12-29T05:00:00.000Z,
    "home": Object {
      "abbrev": "BUF",
      "conference": "AFC",
      "division": "East",
      "id": "buf",
      "location": "Buffalo",
      "name": "Bills",
    },
    "homePts": "27",
    "id": "243",
    "result": "AWAY",
    "week": "17",
  },
  Object {
    "away": Object {
      "abbrev": "CAR",
      "conference": "NFC",
      "division": "South",
      "id": "car",
      "location": "Carolina",
      "name": "Panthers",
    },
    "awayPts": "10",
    "date": 2002-12-29T05:00:00.000Z,
    "home": Object {
      "abbrev": "NO",
      "conference": "NFC",
      "division": "South",
      "id": "nor",
      "location": "New Orleans",
      "name": "Saints",
    },
    "homePts": "6",
    "id": "247",
    "result": "HOME",
    "week": "17",
  },
]
`;

exports[`ScheduleFilters finds the division games of one or more teams 1`] = `
Array [
  Object {
    "away": Object {
      "abbrev": "NE",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "awayPts": "44",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "NYJ",
      "conference": "AFC",
      "division": "East",
      "id": "nyj",
      "location": "New York",
      "name": "Jets",
    },
    "homePts": "7",
    "id": "22",
    "result": "HOME",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "NE",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "awayPts": "13",
    "date": 2002-10-06T04:00:00.000Z,
    "home": Object {
      "abbrev": "MIA",
      "conference": "AFC",
      "division": "East",
      "id": "mia",
      "location": "Miami",
      "name": "Dolphins",
    },
    "homePts": "26",
    "id": "65",
    "result": "HOME",
    "week": "5",
  },
  Object {
    "away": Object {
      "abbrev": "NE",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "awayPts": "38",
    "date": 2002-11-03T05:00:00.000Z,
    "home": Object {
      "abbrev": "BUF",
      "conference": "AFC",
      "division": "East",
      "id": "buf",
      "location": "Buffalo",
      "name": "Bills",
    },
    "homePts": "7",
    "id": "120",
    "result": "HOME",
    "week": "9",
  },
  Object {
    "away": Object {
      "abbrev": "BUF",
      "conference": "AFC",
      "division": "East",
      "id": "buf",
      "location": "Buffalo",
      "name": "Bills",
    },
    "awayPts": "17",
    "date": 2002-12-08T05:00:00.000Z,
    "home": Object {
      "abbrev": "NE",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "homePts": "27",
    "id": "199",
    "result": "HOME",
    "week": "14",
  },
  Object {
    "away": Object {
      "abbrev": "NYJ",
      "conference": "AFC",
      "division": "East",
      "id": "nyj",
      "location": "New York",
      "name": "Jets",
    },
    "awayPts": "30",
    "date": 2002-12-22T05:00:00.000Z,
    "home": Object {
      "abbrev": "NE",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "homePts": "17",
    "id": "239",
    "result": "AWAY",
    "week": "16",
  },
  Object {
    "away": Object {
      "abbrev": "MIA",
      "conference": "AFC",
      "division": "East",
      "id": "mia",
      "location": "Miami",
      "name": "Dolphins",
    },
    "awayPts": "24",
    "date": 2002-12-29T05:00:00.000Z,
    "home": Object {
      "abbrev": "NE",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "homePts": "27",
    "id": "246",
    "result": "HOME",
    "week": "17",
  },
]
`;

exports[`ScheduleFilters finds the division games of one or more teams 2`] = `
Array [
  Object {
    "away": Object {
      "abbrev": "NE",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "awayPts": "44",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "NYJ",
      "conference": "AFC",
      "division": "East",
      "id": "nyj",
      "location": "New York",
      "name": "Jets",
    },
    "homePts": "7",
    "id": "22",
    "result": "HOME",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "awayPts": "24",
    "date": 2002-09-15T04:00:00.000Z,
    "home": Object {
      "abbrev": "SEA",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "homePts": "13",
    "id": "28",
    "result": "AWAY",
    "week": "2",
  },
  Object {
    "away": Object {
      "abbrev": "NE",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "awayPts": "13",
    "date": 2002-10-06T04:00:00.000Z,
    "home": Object {
      "abbrev": "MIA",
      "conference": "AFC",
      "division": "East",
      "id": "mia",
      "location": "Miami",
      "name": "Dolphins",
    },
    "homePts": "26",
    "id": "65",
    "result": "HOME",
    "week": "5",
  },
  Object {
    "away": Object {
      "abbrev": "SF",
      "conference": "NFC",
      "division": "West",
      "id": "sfo",
      "location": "San Francisco",
      "name": "49ers",
    },
    "awayPts": "28",
    "date": 2002-10-14T04:00:00.000Z,
    "home": Object {
      "abbrev": "SEA",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "homePts": "21",
    "id": "88",
    "result": "AWAY",
    "week": "6",
  },
  Object {
    "away": Object {
      "abbrev": "SEA",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "awayPts": "20",
    "date": 2002-10-20T04:00:00.000Z,
    "home": Object {
      "abbrev": "STL",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "homePts": "37",
    "id": "91",
    "result": "HOME",
    "week": "7",
  },
  Object {
    "away": Object {
      "abbrev": "NE",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "awayPts": "38",
    "date": 2002-11-03T05:00:00.000Z,
    "home": Object {
      "abbrev": "BUF",
      "conference": "AFC",
      "division": "East",
      "id": "buf",
      "location": "Buffalo",
      "name": "Bills",
    },
    "homePts": "7",
    "id": "120",
    "result": "HOME",
    "week": "9",
  },
  Object {
    "away": Object {
      "abbrev": "SEA",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "awayPts": "27",
    "date": 2002-11-10T05:00:00.000Z,
    "home": Object {
      "abbrev": "ARI",
      "conference": "NFC",
      "division": "West",
      "id": "crd",
      "location": "Arizona",
      "name": "Cardinals",
    },
    "homePts": "6",
    "id": "140",
    "result": "HOME",
    "week": "10",
  },
  Object {
    "away": Object {
      "abbrev": "SEA",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "awayPts": "24",
    "date": 2002-12-01T05:00:00.000Z,
    "home": Object {
      "abbrev": "SF",
      "conference": "NFC",
      "division": "West",
      "id": "sfo",
      "location": "San Francisco",
      "name": "49ers",
    },
    "homePts": "31",
    "id": "189",
    "result": "HOME",
    "week": "13",
  },
  Object {
    "away": Object {
      "abbrev": "BUF",
      "conference": "AFC",
      "division": "East",
      "id": "buf",
      "location": "Buffalo",
      "name": "Bills",
    },
    "awayPts": "17",
    "date": 2002-12-08T05:00:00.000Z,
    "home": Object {
      "abbrev": "NE",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "homePts": "27",
    "id": "199",
    "result": "HOME",
    "week": "14",
  },
  Object {
    "away": Object {
      "abbrev": "STL",
      "conference": "NFC",
      "division": "West",
      "id": "ram",
      "location": "St. Louis",
      "name": "Rams",
    },
    "awayPts": "10",
    "date": 2002-12-22T05:00:00.000Z,
    "home": Object {
      "abbrev": "SEA",
      "conference": "NFC",
      "division": "West",
      "id": "sea",
      "location": "Seattle",
      "name": "Seahawks",
    },
    "homePts": "30",
    "id": "236",
    "result": "HOME",
    "week": "16",
  },
  Object {
    "away": Object {
      "abbrev": "NYJ",
      "conference": "AFC",
      "division": "East",
      "id": "nyj",
      "location": "New York",
      "name": "Jets",
    },
    "awayPts": "30",
    "date": 2002-12-22T05:00:00.000Z,
    "home": Object {
      "abbrev": "NE",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "homePts": "17",
    "id": "239",
    "result": "AWAY",
    "week": "16",
  },
  Object {
    "away": Object {
      "abbrev": "MIA",
      "conference": "AFC",
      "division": "East",
      "id": "mia",
      "location": "Miami",
      "name": "Dolphins",
    },
    "awayPts": "24",
    "date": 2002-12-29T05:00:00.000Z,
    "home": Object {
      "abbrev": "NE",
      "conference": "AFC",
      "division": "East",
      "id": "nwe",
      "location": "New England",
      "name": "Patriots",
    },
    "homePts": "27",
    "id": "246",
    "result": "HOME",
    "week": "17",
  },
]
`;

exports[`ScheduleFilters finds the head-to-head games between two or more teams 1`] = `
Array [
  Object {
    "away": Object {
      "abbrev": "CAR",
      "conference": "NFC",
      "division": "South",
      "id": "car",
      "location": "Carolina",
      "name": "Panthers",
    },
    "awayPts": "0",
    "date": 2002-10-20T04:00:00.000Z,
    "home": Object {
      "abbrev": "ATL",
      "conference": "NFC",
      "division": "South",
      "id": "atl",
      "location": "Atlanta",
      "name": "Falcons",
    },
    "homePts": "30",
    "id": "96",
    "result": "HOME",
    "week": "7",
  },
  Object {
    "away": Object {
      "abbrev": "ATL",
      "conference": "NFC",
      "division": "South",
      "id": "atl",
      "location": "Atlanta",
      "name": "Falcons",
    },
    "awayPts": "41",
    "date": 2002-11-24T05:00:00.000Z,
    "home": Object {
      "abbrev": "CAR",
      "conference": "NFC",
      "division": "South",
      "id": "car",
      "location": "Carolina",
      "name": "Panthers",
    },
    "homePts": "0",
    "id": "163",
    "result": "AWAY",
    "week": "12",
  },
]
`;

exports[`ScheduleFilters finds the head-to-head games between two or more teams 2`] = `
Array [
  Object {
    "away": Object {
      "abbrev": "CAR",
      "conference": "NFC",
      "division": "South",
      "id": "car",
      "location": "Carolina",
      "name": "Panthers",
    },
    "awayPts": "0",
    "date": 2002-10-20T04:00:00.000Z,
    "home": Object {
      "abbrev": "ATL",
      "conference": "NFC",
      "division": "South",
      "id": "atl",
      "location": "Atlanta",
      "name": "Falcons",
    },
    "homePts": "30",
    "id": "96",
    "result": "HOME",
    "week": "7",
  },
  Object {
    "away": Object {
      "abbrev": "ATL",
      "conference": "NFC",
      "division": "South",
      "id": "atl",
      "location": "Atlanta",
      "name": "Falcons",
    },
    "awayPts": "34",
    "date": 2002-11-10T05:00:00.000Z,
    "home": Object {
      "abbrev": "PIT",
      "conference": "AFC",
      "division": "North",
      "id": "pit",
      "location": "Pittsburgh",
      "name": "Steelers",
    },
    "homePts": "34",
    "id": "132",
    "result": "TIE",
    "week": "10",
  },
  Object {
    "away": Object {
      "abbrev": "ATL",
      "conference": "NFC",
      "division": "South",
      "id": "atl",
      "location": "Atlanta",
      "name": "Falcons",
    },
    "awayPts": "41",
    "date": 2002-11-24T05:00:00.000Z,
    "home": Object {
      "abbrev": "CAR",
      "conference": "NFC",
      "division": "South",
      "id": "car",
      "location": "Carolina",
      "name": "Panthers",
    },
    "homePts": "0",
    "id": "163",
    "result": "AWAY",
    "week": "12",
  },
  Object {
    "away": Object {
      "abbrev": "CAR",
      "conference": "NFC",
      "division": "South",
      "id": "car",
      "location": "Carolina",
      "name": "Panthers",
    },
    "awayPts": "14",
    "date": 2002-12-15T05:00:00.000Z,
    "home": Object {
      "abbrev": "PIT",
      "conference": "AFC",
      "division": "North",
      "id": "pit",
      "location": "Pittsburgh",
      "name": "Steelers",
    },
    "homePts": "30",
    "id": "209",
    "result": "HOME",
    "week": "15",
  },
]
`;
